# AccilaNews-WebScraping

./: .gitignore  README.md  camera_number.txt  pyproject.toml
.github/workflows/: pylint.yml
src/accilanews_webscraping/: main.py
src/detection/: Detect.py
