[project]
name = "accilanews-webscraping"
version = "0.1.0"
description = "Scraping http://www.bmatraffic.com/ using urllib3"
dependencies = [
    "selenium>=4.12.0",
    "matplotlib>=3.7.2",
    "tensorflow>=2.13.0",
    "beautifulsoup4>=4.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
