[project]
name = "detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "microhum", email = "Guntee12123@gmail.com" }
]
dependencies = [
    "tensorflow>=2.13.0",
    "selenium>=4.12.0",
    "opencv-python>=4.8.0.76",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
